# libffi-rs

./: README.md
.github/workflows/: test.yml
libffi-rs/: Cargo.toml
libffi-rs/examples/: sort.rs  types.rs
libffi-rs/src/: lib.rs  low.rs
libffi-rs/src/high/: call.rs  mod.rs
libffi-rs/src/middle/: builder.rs  mod.rs  types.rs
libffi-sys-rs/: Cargo.toml  README.md
libffi-sys-rs/include/msvc/: ffi.h  fficonfig.h
libffi-sys-rs/libffi/: .gitignore  Makefile.in  aclocal.m4  configure
libffi-sys-rs/libffi/doc/: Makefile.in
libffi-sys-rs/libffi/include/: Makefile.in
libffi-sys-rs/libffi/man/: Makefile.in
libffi-sys-rs/libffi/src/x86/: win64_intel.asm
libffi-sys-rs/libffi/testsuite/: Makefile.in
