[package]
name = "deno-libffi"
version = "0.0.7"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Rust bindings for libffi"
repository = "https://github.com/tov/libffi-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["ffi", "libffi", "closure", "c"]
categories = ["development-tools::ffi"]
edition = "2018"

[dependencies]
deno-libffi-sys = { path = "../libffi-sys-rs", version = "=0.0.7" }
abort_on_panic = "2.0.0"
libc = "0.2.65"

[features]
complex = []
system = ["deno-libffi-sys/system"]

[package.metadata.docs.rs]
features = ["system"]
